--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,8 +25,8 @@ spring:
   datasource:
     url: jdbc:mysql://101.101.209.147:3306/test?allowPublicKeyRetrieval=true&useSSL=false
     driver-class-name: org.mariadb.jdbc.Driver
-    username: goodpass
-    password: Rntvotm1!
+    username: ${MYSQL_DEV_USERNAME}
+    password: ${MYSQL_DEV_PASSWORD}
 server:
   port: 8081
 ---
